<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.daniel.gry.Opcje" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/graj"
        android:text="@string/start"
        android:textColor="@color/Red"
        android:textSize="40sp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:onClick="start"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wyniki"
        android:text="@string/wyniki"
        android:textColor="@color/Blue"
        android:textSize="40sp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:onClick="wyniki"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autor"
        android:text="@string/autor"
        android:textColor="@color/Green"
        android:textSize="40sp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:onClick="autor"
        />


</LinearLayout>
