<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.daniel.gry.WyborGry" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kolory"
        android:text="@string/graKolory"
        android:textColor="@color/Red"
        android:textSize="40sp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:onClick="kolory"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liczenie"
        android:text="@string/graLiczenie"
        android:textColor="@color/Blue"
        android:textSize="40sp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:onClick="liczenie"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xxx"
        android:text="@string/graKierunki"
        android:textColor="@color/Green"
        android:textSize="40sp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:onClick="kierunki"
        />


</LinearLayout>
