<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.daniel.gry.Autor" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Autor aplikacji:"
        android:textSize="25sp"
        android:textColor="@color/Green"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imieINazwiskoAutora"
        android:textSize="50sp"
        android:textColor="@color/Red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Blue"
        android:textSize="35sp"
        android:text="@string/podpis"
        android:layout_marginBottom="@android:dimen/notification_large_icon_height"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Red"
        android:textSize="30sp"
        android:text="@string/siedem"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/Red"
        android:text="7"
        />


</LinearLayout>
